--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
+    "moment": "^2.18.0",
     "mongodb": "^2.2.24",
-    "monk":"^4.0.0"
+    "monk": "^4.0.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2"
   }
 }
